# mcp-audit

./: README.md  pyproject.toml
mcp_audit/: __init__.py  cli.py  models.py  reporter.py  scanner.py
mcp_audit/checks/: __init__.py  env_injection.py  hooks.py  permissions.py  supply_chain.py
tests/: __init__.py  test_cli.py  test_env_injection.py  test_hooks.py  test_permissions.py  test_reporter.py  test_scanner.py  test_supply_chain.py
